--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,14 @@
             <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
+
+        <!-- pageHelper -->
+<!--        <dependency>-->
+<!--            <groupId>com.github.pagehelper</groupId>-->
+<!--            <artifactId>pagehelper</artifactId>-->
+<!--            <version>5.3.0</version>-->
+<!--        </dependency>-->
+
     </dependencies>
 
 
